[gd_scene load_steps=21 format=3 uid="uid://bxhb5uege4ng5"]

[ext_resource type="Script" uid="uid://bv6t2filww7ro" path="res://scripts/instructions.gd" id="1_r7su1"]
[ext_resource type="FontFile" uid="uid://bfqb0iyxyahdd" path="res://assets/font/kiwisoda/KiwiSoda.ttf" id="2_c6be6"]
[ext_resource type="Texture2D" uid="uid://bnlc8crg4ppa7" path="res://assets/UI_UX/Free_Menu_Buttons/Sprite_Png/quit.png" id="3_2n4j6"]
[ext_resource type="AudioStream" uid="uid://dnsef5arins8g" path="res://assets/audio/534347__orginaljun__funky-pixel-melody-loop.wav" id="3_i2hxp"]
[ext_resource type="Texture2D" uid="uid://dqd7bsoonhhkd" path="res://assets/UI_UX/Free_Menu_Buttons/Sprite_Png/start.png" id="4_olnwl"]
[ext_resource type="Texture2D" uid="uid://cywd5xxkgkw3i" path="res://assets/personnage/joueur/v03/Luneblade - Little Axion (Free)/Sprite Sheet/Run.png" id="4_r7su1"]
[ext_resource type="Texture2D" uid="uid://c0r2tbgx4s0am" path="res://assets/UI_UX/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoulHeaderA-Sheet.png" id="7_i5xgr"]
[ext_resource type="Texture2D" uid="uid://cphah30h66t2w" path="res://assets/UI_UX/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoul9SlicesA-Sheet.png" id="8_jxpsd"]
[ext_resource type="AudioStream" uid="uid://dhqil5ik13306" path="res://assets/audio/click.wav" id="9_olnwl"]

[sub_resource type="Gradient" id="Gradient_jh4dl"]
offsets = PackedFloat32Array(0, 0.309524, 0.583333, 1)
colors = PackedColorArray(0.2, 0.0941176, 0.203922, 1, 0.194804, 0.110573, 0.21749, 1, 0.153753, 0.240568, 0.324679, 1, 0.0461763, 0.212605, 0.163714, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gosh8"]
gradient = SubResource("Gradient_jh4dl")
fill = 1
fill_from = Vector2(0.517241, 0.50431)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6be6"]
atlas = ExtResource("4_r7su1")
region = Rect2(0, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2hxp"]
atlas = ExtResource("4_r7su1")
region = Rect2(144, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_2n4j6"]
atlas = ExtResource("4_r7su1")
region = Rect2(288, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_olnwl"]
atlas = ExtResource("4_r7su1")
region = Rect2(432, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5xgr"]
atlas = ExtResource("4_r7su1")
region = Rect2(576, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxpsd"]
atlas = ExtResource("4_r7su1")
region = Rect2(720, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvtqk"]
atlas = ExtResource("4_r7su1")
region = Rect2(864, 0, 144, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_iilnc"]
atlas = ExtResource("4_r7su1")
region = Rect2(1008, 0, 144, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_vb0mi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6be6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2hxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n4j6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olnwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5xgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxpsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvtqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iilnc")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_r7su1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 272.0
offset_top = 136.0
offset_right = 904.0
offset_bottom = 304.0
theme_override_fonts/normal_font = ExtResource("2_c6be6")
theme_override_font_sizes/normal_font_size = 35
text = "Utiliser les touches flèches ou W,A et D du clavier pour déplacer le personnage

Sauter sur les ennemies pour les éliminer

Collecter les clés pour déverrouiller les portails

Éviter d'aller dans l'eau

Votre objectif est d'essayer de prendre le cristal à la fin du niveau"
tab_size = 6

[node name="retour" type="Button" parent="Control"]
z_index = 1
layout_mode = 0
offset_left = 184.0
offset_top = 432.0
offset_right = 351.0
offset_bottom = 486.0
scale = Vector2(2, 2)
focus_mode = 0
theme_override_fonts/font = ExtResource("2_c6be6")
theme_override_font_sizes/font_size = 45
text = "
"
icon = ExtResource("3_2n4j6")
flat = true

[node name="jouer" type="Button" parent="Control"]
z_index = 1
layout_mode = 0
offset_left = 638.76
offset_top = 432.0
offset_right = 805.76
offset_bottom = 486.0
scale = Vector2(2, 2)
focus_mode = 0
theme_override_fonts/font = ExtResource("2_c6be6")
theme_override_font_sizes/font_size = 45
toggle_mode = true
text = "
"
icon = ExtResource("4_olnwl")
flat = true

[node name="TextureRect" type="TextureRect" parent="Control"]
z_index = -1
layout_mode = 0
offset_right = 1152.0
offset_bottom = 656.0
mouse_filter = 2
texture = SubResource("GradientTexture2D_gosh8")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i2hxp")
autoplay = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 376)
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_vb0mi")
animation = &"run"

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(560, 483.3)
scale = Vector2(11.8333, 4)
texture = ExtResource("7_i5xgr")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(576, 332)
scale = Vector2(12, 6.91667)
texture = ExtResource("8_jxpsd")

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_olnwl")

[connection signal="pressed" from="Control/retour" to="." method="_on_retour_pressed"]
[connection signal="pressed" from="Control/jouer" to="." method="_on_jouer_pressed"]
